<resources>
    <string name="app_name">A_simple_Calculator</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button">3</string>
    <string name="button4">DEL</string>
    <string name="button5">4</string>
    <string name="button6">5</string>
    <string name="button7">6</string>
    <string name="button8">8</string>
    <string name="butt">+</string>
    <string name="buttons2">7</string>
    <string name="button11">8</string>
    <string name="button9">9</string>
    <string name="button10">0</string>
    <string name="button30">-</string>
    <string name="button31">/</string>
    <string name="button45">*</string>
    <string name="button50">=</string>
    <string name="textview" />
    <string name="textview2" />
    <string name="textview50">A Simple Calculator</string>
</resources>