<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginLeft="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="408dp"
        android:layout_height="359dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClick1"
                android:text="@string/button1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClick2"
                android:text="@string/button2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClick3"
                android:text="@string/button"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonDel"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClickDel"
                android:text="@string/button4"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClick4"
                android:text="@string/button5"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClick5"
                android:text="@string/button6"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClick6"
                android:text="@string/button7"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClickAdd"
                android:text="@string/butt" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClick7"
                android:text="@string/buttons2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClick8"
                android:text="@string/button8"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:text="@string/button9"
                android:onClick="onClick9"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClickSub"
                android:text="@string/button30"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button0"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClick0"
                android:text="@string/button10"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClickDiv"
                android:text="@string/button31"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonMul"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClickMul"
                android:text="@string/button45"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonEq"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:onClick="onClickEquals"
                android:text="@string/button50"
                android:textSize="18sp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/textview"
        android:textColor="#450C0C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/textview2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/textview50"
        android:textColor="#F44336"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>